networkpolicy/networkpolicy__basic_kafka_setup__postgresql__all__postgresql__egress__ports__postgresql__nr47__lines15.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: postgresql--all--postgresql--egress--ports--postgresql--nr47
  namespace: postgresql
spec:
  podSelector: {}
  policyTypes:
  - Egress
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          stacktic.io/namespace: postgresql
